Perdonsl Information Added

--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -193,6 +193,12 @@
                                 <span> UnDeployment Project</span>
                             </a>
                         </li>
+                        <li>
+                            <a asp-area="" asp-controller="PersonalInformation" asp-action="Index">
+                                <i class="fa fa-file-o"></i>
+                                <span>Personal Information</span>
+                            </a>
+                        </li>
                     }
                     @*<li class="sub-menu">
             <a href="javascript:;">
